fix main menu height on mobile
https://app.asana.com/0/16583245783686/25954232242270

--- a/src/css/menu.less
+++ b/src/css/menu.less
@@ -347,7 +347,7 @@
   @media (max-width: @screen-xs-max) {
     position: absolute;
     top: 50px;
-    height: auto;
+    height: 85vh;
 
     &.collapsed {
       display: none;
